# traffic_monitor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  README.md.save  build.sh  codecov.yml  main.cpp  run.sh  start.sh  tests.sh
.travis/: codecov.sh  codecov.yml  travis_build.sh
cmake/: FindGoogleTest.cmake  Settings.cmake
include/traffic_monitor/: blob.h  drawer.h  paths.h  server.h  settings.h  statistics.h  tools.h  tracker.h  window.h
server/: index.html
snap/: snapcraft.yaml
snap/gui/: traffic_monitor.desktop  traffic_monitor.desktop.desktop  vigilatore.desktop
src/: Blob.cc  app_tools.cc  blob.cc  drawer.cc  main.cc  server.cc  settings.cc  statistics.cc  tools.cc  tracker.cc  window.cc  window.ui
test/: CMakeLists.txt  diff_test.cc  get_test_data.py  main.cc  tests.sh
webserver/: index.html
